--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -28,5 +28,6 @@
 \input{content/progettazione}
 \input{content/implementazione}
 \input{content/sviluppi_futuri}
+\input{content/prestazioni}
 
 \end{document}
