no accento accessibilita'

--- a/src_latex/content/accessibilita.tex
+++ b/src_latex/content/accessibilita.tex
@@ -22,7 +22,7 @@ Nonostante aver utilizzato il più possibile i tag semantici offerti da HTML5 ab
 Altri attributi aria come \textit{aria-requried} e simili nei form sono stati omessi dato che sono già presenti quelli nativi di HTML5 che veicolano lo stesso significato.
 
 \subsubsection{Contrasti}
-Si è preso come principale colore uno che rimandi all'ateneo e al dipartimento. Da lì tutti gli altri colori sono stati scelti in modo da avere un contrasto che rispetti gli standard AAA del WCAG. Queste analisi sono state fatte tramite il sito \href{https://contrastchecker.com/}{WCAG - Contrast Checker} e i \textit{Firefox Developer Tools}.
+Si è preso come principale colore uno che rimandi all'ateneo e al dipartimento. Da lì tutti gli altri colori sono stati scelti in modo da avere un contrasto che rispetti gli standard AAA del WCAG sfruttando lo strumento online \href{https://app.contrast-finder.org/}{Contrast Finder}. Queste analisi sono state fatte tramite il sito \href{https://contrastchecker.com/}{WCAG - Contrast Checker} e i \textit{Firefox Developer Tools}.
 
 \subsubsection{Tabindex}
 Non è sembrato necessario modificare l'ordine dei tabindex manualmente. Per come è stato strutturato il sito questi sono già organizzati in modo adeguato.
