--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -29,5 +29,6 @@
 \input{content/implementazione}
 \input{content/sviluppi_futuri}
 \input{content/prestazioni}
+\input{content/accessibilità}
 
 \end{document}
