--- a/src_latex/content/accessibilita.tex
+++ b/src_latex/content/accessibilita.tex
@@ -1,7 +1,7 @@
 \section{Accessibilità}
 Tutto lo sviluppo del sito si è svolto tenendo a mente le raccomandazioni dello standard WCAG 2.0.
 
-\subsubsection{Separazione tra contenuto, presentazione e struttura}
+\subsection{Separazione tra contenuto, presentazione e struttura}
 La separazione tra queste tre parti fondamentali del sito ha permesso di gestire al meglio le possibili categorie di accesso effettuate dai vari utenti. La parte di contenuto è stata sviluppata tramite HTML5 in modo da sfruttare a pieno i tag semantici e le nuove aggiunte dello standard. Tramite CSS sono state poi aggiunte tutte le regole di presentazione per il layout del sito. Il comportamento dinamico del sito è stato sviluppato con il linguaggio Javascript.\\ Sfruttando gli strumenti del W3C, ad esempio il validatore di HTML e CSS, ci siamo accertati di aver rispettato tutte le regole dello standard.
 
 \subsubsection{Assenza di CSS}
@@ -33,7 +33,7 @@ Il sito specifica come lingua principale l'italiano. Ogni parola che deve essere
 \subsection{Strumenti di testing}
 
 Tutte le pagine e i fogli di stile sono state controllate tramite il \href{https://validator.w3.org/}{validatore HTML e CSS} offerto dal W3C.\\
-Durante tutto il ciclo di sviluppo la maggior parte dei controlli è stata fatta tramite i \textit{Firefox Developer Tools} e il software \textit{Lighthouse} all'interno del browser Google Chrome.
+Durante tutto il ciclo di sviluppo la maggior parte dei controlli è stata fatta tramite i \textit{Firefox Developer Tools} e il software \href{https://developers.google.com/web/tools/lighthouse}{Lighthouse} all'interno del browser Google Chrome.
 
 \subsubsection{Ambienti di test}
 Il sito è stato testato su ambiente Linux, Windows e MacOS, sui browser Firefox, Chromium, Google Chrome, Microsoft Edge.\\
