--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -17,16 +17,16 @@ Dall'analisi dell'utenza possiamo assumere che il sito verrà visitato da browse
 
 Il sito presenta molteplici livelli di profondità:
 \begin{itemize}
-    \item \textbf{Home: } Vengono illustrate in breve le funzioni principali del sito.
-    \item \textbf{Corsi: } Vengono elencati i vari corsi del CdL in informatica suddivisi in base all' anno in cui andrebbero seguiti:
+    \item \textbf{Home:} Vengono illustrate in breve le funzioni principali del sito.
+    \item \textbf{Corsi:} Vengono elencati i vari corsi del CdL in informatica suddivisi in base all' anno in cui andrebbero seguiti:
         \begin{itemize}
-            \item \textbf{Corso: } È la pagina dedicata ad un corso nello specifico su di essa si può lasciare e leggere le varie recensioni oltre ad ottenere informazioni specifiche del corso, quali una breve descrizione, i CFU e contatto del professore che lo organizza.
+            \item \textbf{Corso:} È la pagina dedicata ad un corso nello specifico su di essa si può lasciare e leggere le varie recensioni oltre ad ottenere informazioni, quali una breve descrizione, i CFU e contatto del professore che lo organizza.
         \end{itemize}
-    \item \textbf{Aule: } Vengono elencate le aule studio vicine ai luoghi frequentati dagli studenti del CdL in informatica accompagnati da una breve descrizione e dalla possibilità di ordinarli per distanza tramite geolocalizzazione:
+    \item \textbf{Aule:} Vengono elencate le aule studio vicine ai luoghi frequentati dagli studenti del CdL in informatica accompagnati da una breve descrizione e dalla possibilità di ordinarli per distanza tramite geolocalizzazione:
         \begin{itemize}
-            \item \textbf{Aula: } È la pagina dedicata ad un' aula studio nello specifico, essa mette a disposizione delle foto, informazioni sui servizi disponibili e recensioni.
+            \item \textbf{Aula:} È la pagina dedicata ad un' aula studio nello specifico, essa mette a disposizione delle foto, informazioni sui servizi disponibili e recensioni.
         \end{itemize}
-    \item \textbf{FAQ: } È disponibile una serie di domande frequentemente poste sui vari canali del CdL in informatica accompaganti da risposte.
+    \item \textbf{FAQ:} È disponibile una serie di domande frequentemente poste sui vari canali del CdL in informatica accompaganti da risposte.
 \end{itemize}
 
 \subsubsection{Header}
@@ -100,6 +100,7 @@ Purtroppo a causa di foza maggiore dovute allo stato di salute di uno dei membri
             \item Inserimento dei componenti HTML con attributi aria dedicati all'accessibilità;
             \item Stesura della realazione;
             \item Realizzazione del codice JavaScript dedicato alla validazione dei form in maniera accessibile;
+            \item Test di accessibilità sui componenti, pagine e colori utilizzati;
         \end{itemize}
 \end{itemize}
 
