--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -1,7 +1,7 @@
 \section{Analisi}
 \subsection{Descrizione testuale}
 
-Ci si propone di realizzare un sito web che consensta agli studenti dell'Università di Padova iscritti al Corso di Laurea in informatica. di accedere ad informazioni relative alla propria permanenza nei locali dell'università di Padova e ai corsi.\\
+Ci si propone di realizzare un sito web che consensta agli studenti dell'Università di Padova iscritti al Corso di Laurea in Informatica di accedere ad informazioni relative alla propria permanenza nei locali dell'ateneo e ai corsi.\\
 Inoltre si vuole mettere a disposizione un punto dove recuperare informazioni velocemente per gestire la vita al di fuori delle lezioni come ad esempio indicazioni per aule studio.\\
 Questo sito punta a centralizzare le informazioni che si posso recuperare, spesso con fatica, dai vari siti di ateneo e dei dipartimenti.\\
 Proprio per questo particolare attenzione viene posta sull'esperienza da dispotivo mobile, dato che gli studenti sono molto spesso in movimento e sfruttano lo smartphone per risolvere velocemente dei dubbi.\\
@@ -19,14 +19,14 @@ Gli argomenti di cui gli studenti hanno più dubbi, stando a quanto si nota dai 
 L'utenza sarà principalmente formata da studenti del CdL in Informatica. Data la vicinanza geografica con i dipartimenti di Matematica, Fisica e Ingegneria nulla vieta anche ai loro studenti di visitare il nostro sito per ottenere alcune informazioni utili.\\
 Dall'analisi appena fatta quindi possiamo aspettarci degli utenti consapevoli nell'utilizzo dei loro strumenti, con aggiornamenti frequenti e attuali, curiosi nel provare nuove funzionalità offerte dai software. Per questo il nostro sito potrà utilizzare senza troppi rischi nuovi standard.
 
-Si vogliono soddisfare sia le persone che vogliono arrivare al "tiro perfetto", infatti abbiamo utilizzato un'organizzazione informativa a schema esatto, sia le persone che non sanno bene cosa cercano e vogliono informazioni generali sul corso di laurea "trappola per aragoste".
+Si vogliono soddisfare sia le persone che vogliono arrivare al \textit{"tiro perfetto"}, infatti abbiamo utilizzato un'organizzazione informativa a schema esatto, sia le persone che non sanno bene cosa cercano e vogliono informazioni generali sul corso di laurea "trappola per aragoste".
 
-Sappiamo inoltre che potremmo soddisfare anche chi fa "pesca a strascico" perché il sito non è di vaste dimensioni.
+Sappiamo inoltre che potremmo soddisfare anche chi fa \textit{"pesca a strascico"} perché il sito non è di vaste dimensioni.
 
 \subsection{Servizi offerti}
 \begin{itemize}
-    \item \textbf{Login} \\ L'utente può iscriversi per commentare aule studio e corsi per contribuire con le proprie conoscenze ad una conoscenza globale e distribuita;
-    \item \textbf{Recensioni} \\L'utente deve poter leggere e creare recensioni dei corsi erogati dall'Università di Padova e delle aule studio;
+    \item \textbf{Login} \\ L'utente può iscriversi per commentare aule studio e corsi per contribuire con le proprie conoscenze ad una globale e distribuita;
+    \item \textbf{Recensioni} \\L'utente deve poter leggere e creare recensioni dei corsi erogati nel Corso di Informatica e delle aule studio;
     \item \textbf{Stampa microguide} \\ Un utente può salvarsi tramite stampa alcune pagine in modo da poterle visualizzare offline;
-    \item \textbf{Aule studio più vicine} \\ L'utente potrà trovare le aule studio più vicine a se tramite la geolocalizzazione.
+    \item \textbf{Aule studio più vicine} \\ L'utente potrà trovare le aule studio più vicine a sé tramite la geolocalizzazione.
 \end{itemize}
