--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -1,6 +1,9 @@
 \documentclass[a4paper, 11pt]{article}
 \usepackage{hyperref}
 \usepackage{geometry}
+\usepackage{longtable}
+\usepackage[table,xcdraw]{xcolor}
+\usepackage{float}
  \geometry{
  a4paper,
  left=25mm,
@@ -22,7 +25,51 @@
 
 \begin{document}
 
-\maketitle
+\begin{center}
+	\textbf{\Huge{Help @ UniPd}}\\
+\end{center}
+
+\vspace{1.5cm}
+
+\begin{center}
+	\textbf{\huge{Relazione progetto Tecnologie Web}}\\[0.2cm]
+	\Large{Anno 2021-2022}
+\end{center}
+
+\vspace{5pt}
+
+\begin{center}
+	\textbf{\Large{Gruppo}}
+    \begin{table}[H]
+        \hspace{3.5cm}
+        \renewcommand{\arraystretch}{1.4}
+        \begin{tabular}{l | l}
+            \textbf{Componenti} & Alessio Ferrarini 1223860\\
+            & Alessandro Massarenti 1204684\\
+            & Elia Pasquali 1225412\\
+        \end{tabular}
+    \end{table}
+\end{center}
+
+\hspace{5pt}
+
+\begin{center}
+	\textbf{\Large{Informazioni sul sito}}\\
+	\textbf{Indirizzo sito web} \url{https://tecweb.studenti.math.unipd.it/elpasqua}\\
+	\textbf{Email referente gruppo:} alessandro.massarenti@studenti.unipd.it\\
+    \vspace{1cm}
+    \begin{longtable}{|l|l|l|}
+        \hline
+        \rowcolor[HTML]{9B0014}
+        {\color[HTML]{FFFFFF} Ruolo} & {\color[HTML]{FFFFFF} Username} & {\color[HTML]{FFFFFF} Password} \\ \hline
+        Utente         & user     & user     \\ \hline
+        Amministratore & admin    & admin \\ \hline
+    \end{longtable}
+\end{center}
+
+\pagebreak
+\tableofcontents
+\pagebreak
 
 \input{content/analisi}
 \input{content/progettazione}
