--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -55,9 +55,11 @@
 
 \begin{center}
 	\textbf{\Large{Informazioni sul sito}}\\
-	\textbf{Indirizzo sito web} \url{https://tecweb.studenti.math.unipd.it/elpasqua}\\
+	\textbf{Login consegna:} elpasqua \\
+	\textbf{Indirizzo sito web:} \url{https://tecweb.studenti.math.unipd.it/elpasqua}\\
 	\textbf{Email referente gruppo:} alessandro.massarenti@studenti.unipd.it\\
     \vspace{1cm}
+    \textbf{Accessi interni al sito}
     \begin{longtable}{|l|l|l|}
         \hline
         \rowcolor[HTML]{9B0014}
