--- a/src_latex/content/analisi.tex
+++ b/src_latex/content/analisi.tex
@@ -19,9 +19,24 @@ Gli argomenti di cui gli studenti hanno più dubbi, stando a quanto si nota dai 
 L'utenza sarà principalmente formata da studenti del CdL in Informatica. Data la vicinanza geografica con i dipartimenti di Matematica, Fisica e Ingegneria nulla vieta anche ai loro studenti di visitare il nostro sito per ottenere alcune informazioni utili.\\
 Dall'analisi appena fatta quindi possiamo aspettarci degli utenti consapevoli nell'utilizzo dei loro strumenti, con aggiornamenti frequenti e attuali, curiosi nel provare nuove funzionalità offerte dai software. Per questo il nostro sito potrà utilizzare senza troppi rischi nuovi standard.
 
-Si vogliono soddisfare sia le persone che vogliono arrivare al \textit{"tiro perfetto"}, infatti abbiamo utilizzato un'organizzazione informativa a schema esatto, sia le persone che non sanno bene cosa cercano e vogliono informazioni generali sul corso di laurea "trappola per aragoste".
-
-Sappiamo inoltre che potremmo soddisfare anche chi fa \textit{"pesca a strascico"} perché il sito non è di vaste dimensioni.
+Il sito permette a tutte le tipologie di ricerca di essere effettuate con
+efficacia:
+\begin{itemize}
+    \item \textbf{Tiro perfetto:} Grazie ad uno schema organizzativo esatto
+        l'utente può raggiungere l'informazione che cerca al primo colpo.
+    \item \textbf{Trappola per aragoste: } Grazie alla suddivisione in
+        sottocategorie sia dei corsi che delle aule studio l'utente può già
+        farsi una idea del contenuto disponibile sul sito grazie alle
+        descrizioni.
+    \item \textbf{Pesca con la rete:} La struttura del sito è particolarmente
+        semplice ed intuitiva, questo permette agli utenti di esporare la
+        totalita del sito senza perdere contenuti o entrare in stato di
+        confusione.
+    \item \textbf{Boa di segnalazione:} Tutte le pagine visibi all'utente
+        utilizzano parametri passaggio di parametri tramite metodo
+        \textit{POST} quindi permettendo di salvare le pagine relative a
+        qualsiasi contenuto.
+\end{itemize}
 
 \subsection{Servizi offerti}
 \begin{itemize}
