--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -15,7 +15,7 @@
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0pt}
 
-\title{Progetto TecWeb \\ UniHelp}
+\title{Progetto TecWeb \\ UniHelp@Unipd}
 
 %Plausibile titolo: UniHelp?
 
@@ -26,7 +26,7 @@
 \begin{document}
 
 \begin{center}
-	\textbf{\Huge{Help @ UniPd}}\\
+	\textbf{\Huge{Unihelp@Unipd}}\\
 \end{center}
 
 \vspace{1.5cm}
